--- a/app/src/main/res/layout/data_point_list_row.xml
+++ b/app/src/main/res/layout/data_point_list_row.xml
@@ -16,15 +16,16 @@
     android:background="?android:attr/selectableItemBackground"
     >
 
-    <!-- ID -->
+    <!-- Project ID -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
+
         <TextView
-            android:id="@+id/projectRowIDLabel"
-            android:text="@string/project_row_id_label"
+            android:id="@+id/pointRowProjectIDLabel"
+            android:text="@string/point_row_project_id_label"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="25"
@@ -34,7 +35,7 @@
             android:background="@color/colorScreenBackground"
             />
         <TextView
-            android:id="@+id/projectRowID"
+            android:id="@+id/pointRowProjectID"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -47,15 +48,16 @@
 
     </LinearLayout>
 
-    <!-- Name -->
+    <!-- Point ID -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
+
         <TextView
-            android:id="@+id/projectRowNameLabel"
-            android:text="@string/project_row_name_label"
+            android:id="@+id/pointRowPointIDLabel"
+            android:text="@string/point_row_point_id_label"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="25"
@@ -65,7 +67,7 @@
             android:background="@color/colorScreenBackground"
             />
         <TextView
-            android:id="@+id/projectRowName"
+            android:id="@+id/pointRowPointID"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -76,10 +78,10 @@
             android:background="@color/colorWhite"
             />
 
-
     </LinearLayout>
 
-    <!-- Date Last Modified -->
+
+    <!-- Easting -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -87,8 +89,8 @@
         >
 
         <TextView
-            android:id="@+id/projectRowLastModifiedLabel"
-            android:text="@string/project_row_last_modified_date_label"
+            android:id="@+id/pointRowEastingLabel"
+            android:text="@string/point_row_easting_label"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="25"
@@ -98,7 +100,7 @@
             android:background="@color/colorScreenBackground"
             />
         <TextView
-            android:id="@+id/projectRowLastModified"
+            android:id="@+id/pointRowEasting"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -109,10 +111,10 @@
             android:background="@color/colorWhite"
             />
 
-
     </LinearLayout>
 
-    <!-- Size -->
+
+    <!-- Northing -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -120,8 +122,8 @@
         >
 
         <TextView
-            android:id="@+id/projectRowSizeLabel"
-            android:text="@string/project_row_size_label"
+            android:id="@+id/pointRowNorthingLabel"
+            android:text="@string/point_row_northing_label"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="25"
@@ -131,7 +133,7 @@
             android:background="@color/colorScreenBackground"
             />
         <TextView
-            android:id="@+id/projectRowSize"
+            android:id="@+id/pointRowNorthing"
 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -142,7 +144,73 @@
             android:background="@color/colorWhite"
             />
 
+    </LinearLayout>
+
+
+    <!-- Elevation -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/pointRowElevationLabel"
+            android:text="@string/point_row_elevation_label"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="25"
+            android:gravity="end"
+
+            android:textColor="@color/colorTextBlack"
+            android:background="@color/colorScreenBackground"
+            />
+        <TextView
+            android:id="@+id/pointRowElevation"
+
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="75"
+            android:layout_marginEnd="16dp"
+
+            android:textColor="@color/colorTextBlack"
+            android:background="@color/colorWhite"
+            />
 
     </LinearLayout>
+
+
+    <!-- Description -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/pointRowDescriptionLabel"
+            android:text="@string/point_row_description_label"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="25"
+            android:gravity="end"
+
+            android:textColor="@color/colorTextBlack"
+            android:background="@color/colorScreenBackground"
+            />
+        <TextView
+            android:id="@+id/pointRowDescription"
+
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="75"
+            android:layout_marginEnd="16dp"
+
+            android:textColor="@color/colorTextBlack"
+            android:background="@color/colorWhite"
+            />
+
+    </LinearLayout>
+
 
 </LinearLayout>
